<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Seng499</string>

    <string name="welcome_message">Press the menu key and connect to the Arduino</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    
    <!-- Starting Menu Buttons -->
    <string name="button_num_players_one">One Player</string>
    <string name="button_num_players_two">Two Player</string>
    <string name="button_num_players_three">Three Player</string>
    
    <!-- Button Text -->
    <string name="button_up">Forward</string>
    <string name="button_down">Reverse</string>
    <string name="button_left">Left</string>
    <string name="button_right">Right</string>
    <string name="button_vertical_up">Up</string>
    <string name="button_vertical_down">Down</string>
    <string name="button_menu">Back to player menu</string>
        
</resources>
