<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >   
    <Button android:id="@+id/button_num_players_one"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:text="@string/button_num_players_one"
	   android:layout_gravity="center"
   	/>       
   	<Button android:id="@+id/button_num_players_two"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:text="@string/button_num_players_two"
	   android:layout_gravity="center"
   	/>        
   	<Button android:id="@+id/button_num_players_three"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:text="@string/button_num_players_three"
	   android:layout_gravity="center"
  	/>
</LinearLayout>
